Endpoints de histórico funcionando